Updating learn project